--- a/minesweeper-thing/Cargo.toml
+++ b/minesweeper-thing/Cargo.toml
@@ -15,10 +15,14 @@ opt-level = 3
 
 [features]
 default = ["debug"]
-debug = []
+debug = ["board_plugin/debug", "bevy-inspector-egui"]
 
 [dependencies]
 bevy = { version = "0.11", features = ["serialize", "dynamic_linking"] }
 lazy_static = "1.4"
 rand = "0.8"
-bevy-inspector-egui = "0.19"
+bevy-inspector-egui = { version = "0.19", optional = true }
+board_plugin = { path = "board_plugin" }
+
+[workspace]
+members = ["board_plugin"]
