--- a/fff-live-tracker/Cargo.toml
+++ b/fff-live-tracker/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 ratatui = "0.25"
-reqwest = "0.11"
-tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
+reqwest = { version = "0.11", features = ["blocking"] }
+#rss = "2.0"
+atom_syndication = "0.12"
