--- a/bullet-game/Cargo.toml
+++ b/bullet-game/Cargo.toml
@@ -11,6 +11,18 @@ opt-level = 1
 [profile.dev.package."*"]
 opt-level = 3
 
+[profile.optimized]
+inherits = "release"
+debug = true
+strip = "none"
+debug-assertions = true
+overflow-checks = true
+incremental = true
+codegen-units = 256
+
 [dependencies]
-bevy = { version = "0.12.1", features = ["dynamic_linking"] }
+bevy = { version = "0.12.1" }
 itertools = "0.12"
+
+[features]
+default = ["bevy/dynamic_linking"]
