removed some things and played with more linking options

--- a/acerola-jam-0/Cargo.toml
+++ b/acerola-jam-0/Cargo.toml
@@ -5,16 +5,17 @@ edition = "2021"
 
 # fast iteration
 [profile.dev]
-debug = 0
+debug = 0 # none
 strip = "debuginfo"
-opt-level = 1
+opt-level = 1 # seemingly *has* to be 1 on windows?
 
 # full debug info
 [profile.debuggable]
 inherits = "dev"
-debug = 2
+debug = 2 # full
 strip = "none"
-opt-level = 0 # opt level can break stepping flow? https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds
+opt-level = 0 # opt level can break stepping flow?
+# https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds
 
 # fast with debug info (compiled once during development, ideally)
 [profile.fast-dependency]
