--- a/acerola-jam-0/.cargo/config.toml
+++ b/acerola-jam-0/.cargo/config.toml
@@ -1,13 +1,4 @@
 [target.x86_64-pc-windows-msvc]
-linker = "rust-lld.exe" # seems to be faster
-# nightly build with most custom-ness: "non-relocatable executable", more threads, no shared generics (breaks with bevy?)
-#rustflags = ["-Crelocation-model"-Zshare-generics=off", "-Zthreads=8"] # shared generics seems to break on windows, threads=8 works and is faster on my machine
-
-# basic nightly setup that seems to work
-rustflags = ["-Zshare-generics=off", "-Zthreads=8"] # shared generics seems to break on windows with bevy, threads=8 works and is faster on my machine
-
-# 'threads' is nightly only (idk about share generics, there is conflicting information online)
-#rustflags = ["-Zthreads=8"] # shared generics seems to break on windows, threads=8 works and is faster on my machine
-
-# stable with share generics off (idk)
-#rustflags = ["-Zshare-generics=off"] # shared generics seems to break on windows, threads=8 works and is faster on my machine
+rustflags = [
+    "-Zshare-generics=off",
+] # shared generics seems to break on windows with bevy
