--- a/bullet-game/.cargo/config.toml
+++ b/bullet-game/.cargo/config.toml
@@ -25,7 +25,12 @@
 
 [target.x86_64-pc-windows-msvc]
 linker = "rust-lld.exe" # does not matter anymore?
-rustflags = ["-Z", "share-generics=n", "-Z", "threads=8"]
+rustflags = [
+    "-Z",
+    "share-generics=n",
+    "-Z",
+    "threads=8",
+] # should maybe be 'n' not 'y' for bevy
 
 # Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
 # In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
