--- a/hosts-watch/Cargo.toml
+++ b/hosts-watch/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.12.7", features = ["blocking"] }
+reqwest = { version = "0.12.7" }
 scraper = "0.20.0"
 url = "2.5.2"
+tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "io-std", "macros"] }
