--- a/hosts-watch/Cargo.toml
+++ b/hosts-watch/Cargo.toml
@@ -8,3 +8,4 @@ reqwest = { version = "0.12.7" }
 scraper = "0.20.0"
 url = "2.5.2"
 tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "io-std", "macros"] }
+itertools = "0.13.0"
