--- a/hosts-watch/Cargo.toml
+++ b/hosts-watch/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.12.7" }
+#reqwest = { version = "0.12.7" }
 scraper = "0.20.0"
+headless_chrome = "1.0.15"
 url = "2.5.2"
 # 1.40.0 has issues on specific versions of nightly
 tokio = { version = "1.39", features = ["rt", "rt-multi-thread", "io-std", "macros"] }
